--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "embla-carousel-react": "^8.0.0-rc14",
     "framer-motion": "^10.16.4",
     "i18next": "^23.7.16",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.279.0",
     "next": "^15.0.2",
     "next-themes": "^0.2.1",
