--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -51,9 +51,9 @@
     "i18next": "^23.7.16",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.279.0",
-    "next": "^15.0.2",
+    "next": "13.5.1",
     "next-themes": "^0.2.1",
-    "postcss": "^8.4.47",
+    "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
